fix: align colors for events page

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -5,6 +5,7 @@
 @import "bootstrap/functions";
 
 $primary: #023E88;
+$secondary: #00BDE3;
 // $light: #CFCED3;
 // $dark: #1C2327;
 
